--- a/hw6/Assignment6_12131094.ipynb
+++ b/hw6/Assignment6_12131094.ipynb
@@ -3,11 +3,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Advanced Control for Robotics - Homework 6\n",
     "\n",
@@ -21,8 +16,10 @@
    "source": [
     "\n",
     "#### Problem 1 \n",
-    "$\\textbf{Schur complement lemma}$: Find an equivalent semidefinite condition of the form $G(x) ⪰ 0$ for each of the following statements. Make sure the matrix G(x) you obtained is affine w.r.t. $x$, where $x$ is a vector or matrix variable of appropriate dimension. Please show your steps.\n",
-    "(a) (Singular value bound): $σ(A(x)) < β$, where $A$ : $Rn → R^{q×m}$ is affine in x ∈ Rn and σ(·) denotes the singular value of a matrix.\n",
+    "$\\textbf{Schur complement lemma}$: Find an equivalent semidefinite condition of the form $G(x) ⪰ 0$ for each of the following statements. Make sure the matrix G(x) you obtained is affine w.r.t. $x$, where $x$ is a vector or matrix variable of appropriate dimension. Please show your steps. \n",
+    "\n",
+    "(a) (Singular value bound): $σ(A(x)) < β$, where $A$ : $R^n → R^{q×m}$ is affine in x ∈ Rn and σ(·) denotes the singular value of a matrix.\n",
+    "\n",
     "(b) (Riccati inequality): $A^Tx+xA+xBR^{−1}B^{T}x+Q ≺ 0$, with $x ∈ S_{++}^n$ , $R ∈ S_{++}^p$ , $Q ∈ S^n$ and $A ∈ R^{n×n}$, and $B ∈ R^{n×p}$.\n",
     "\n",
     "\n"
@@ -33,10 +30,27 @@
    "metadata": {},
    "source": [
     "#### Solution: \n",
-    "(a) \n",
+    "(a) $\\textbf{(Singular value bound)}$\n",
+    "We can know the sigular value of a matrix M is $σ(M) = \\sqrt{eig(M^TM)} .$\n",
+    "\n",
+    "For the bound of the singular value, $σ(A(x)) < \\beta $ can be expressed by\n",
+    "$$ \\begin{aligned}\\sqrt{eig(A(x)^TA(x))} & < \\beta \\\\\n",
+    "eig(A(x)^TA(x)) & < \\beta^2 \\\\\n",
+    "\\beta^2 - \\mathop{max} {eig(A(x)^TA(x))} & > 0\n",
+    "\\end{aligned}$$\n",
+    "\n",
+    "Therefore, $\\beta^2 I - A(x)^TA(x)$ is PD, For the Schur complement lemma, the inequality can be  \n",
+    "\n",
+    "$$  \\begin{aligned}\\beta^2 I - A(x)^TA(x) &> 0 \\\\\n",
+    " G(x) = \\left[ \\begin{matrix} I & A(x)\\\\ A^T(x) & \\beta^2 I\\end{matrix} \\right] &>0 \\\\\n",
+    "\\end{aligned}$$\n",
+    "\n",
+    "$$G(x) = \\left[ \\begin{matrix} I & 0\\\\ 0 & \\beta^2 I\\end{matrix} \\right] + \\left[ \\begin{matrix} 0& A(x)\\\\ A^T(x) & 0\\end{matrix} \\right] >0 $$\n",
+    "\n",
+    "Since $A(x)$ is affine w.r.t x, so $G(x)$ is also affine w.r.t x.\n",
     "\n",
     "\n",
-    "(b) (Riccati inequality)  $A^Tx+xA+xBR^{−1}B^{T}x+Q ≺ 0$\n",
+    "(b) $\\textbf{(Riccati inequality)}$   $A^Tx+xA+xBR^{−1}B^{T}x+Q ≺ 0$\n",
     "For  $x ∈ S_{++}^n$ , $R ∈ S_{++}^p$ , $Q ∈ S^n$, $A ∈ R^{n×n}$ and $B ∈ R^{n×p}$.\n",
     "\n",
     "The the inequality can be expressed \n",
@@ -72,11 +86,11 @@
     "$ \\textbf{Ellipsoid}$ : Ellipsoid in $R^n$ have two equivalent representations: (i) $E_1(P,x_c) = {x ∈ R^n : (x−x_c)P −1(x−x_c) ≤ 1}$ and \n",
     "(ii) $E_2(A, x_c) = {Au+x_c : ∥u∥^2 ≤ 1}$. The second representation can be derived from the first by letting $A = P^{\\frac{1}{2}}$. Given $E_1(P,xc)$ with $P ∈ {S_{++}^n}$, its volume is ${\\nu_n \\sqrt {det(P)}}$ where $\\nu_n$ is the volume of unit ball in ${R^n}$, its semi-axes directions are given by the eigenvectors of $P$ and the lengths of semi-axes are $\\sqrt{λ_i}$, where $\\sqrt{λ_i}$ are eigenvalues of $P$.\n",
     "\n",
-    "(a) Given a half space {x ∈ Rn : aT x ≤ 1}. Show that the Ellipsoid E2(A, 0) is contained in the eigenvectors of P and the lengths of semi-axes are the half space if and only if $a^TAA^Ta ≤ 1$.\n",
+    "(a) Given a half space ${x ∈ Rn : a^T x ≤ 1}$. Show that the Ellipsoid $E_2(A, 0)$ is contained in the eigenvectors of $P$ and the lengths of semi-axes are the half space if and only if $a^TAA^Ta ≤ 1$.\n",
     "\n",
     "(b) Note that for any $P ∈ S_{++}^n$, the function $log(det(P))$ is concave in the matrix variable $P$. Formulate a convex optimization problem to find the matrix $P ∈ S_{++}^n$ such that $E_1(P, 0)$ is the largest ellipsoid contained in the polyhedron ${x ∈ R^n : a^T_i x ≤ 1,i = 1,...,m}$\n",
     "\n",
-    "(c) Use Drake to solve the above problem with $a^T_1 = [−1, 1]$, $a^T_2 = [2, −1]$, $a^T_3 = [1, 3]$, $a^T_4 = [−2, −5]$. Visualize the polyhedron region and your ellipsoid solution (you can use Matlab for the visualization if you prefer matlab)\n"
+    "(c) Use Drake to solve the above problem with $a^T_1 = [−1, 1]$, $a^T_2 = [2, −1]$, $a^T_3 = [1, 3]$, $a^T_4 = [−2, −5]$. Visualize the polyhedron region and your ellipsoid solution (you can use Matlab for the visualization if you prefer matlab) \n"
    ]
   },
   {
@@ -84,7 +98,18 @@
    "metadata": {},
    "source": [
     "##### Solution:\n",
-    "(a) "
+    "(a) \n",
+    "\n",
+    "(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pro2-3"
    ]
   },
   {
@@ -96,6 +121,7 @@
     "where $A ∈ R^n×n$, $b ∈ R^n$, $c ∈ R^n$, and for each time $t$, the function $\\phi(t,·) : R→ R$ satisfies sector nonlinearity $|\\phi(t,y)| ≤ α|y|$ for all $y$ (but is otherwise unknown). Such a system represents a very general class of control systems involving time-varying nonlinearities and/or\n",
     "uncertainties, and is often called a Lur’e problem.\n",
     "We would like to find a positive definite Lyapunov function $V (x) = x^T Px$ that satisfies ̇$V (x) ≤ −βV (x)$ for all $x$, and for any function $\\phi$ satisfying the inequality given above. You can assume that $A,b,c,α,β$ are given.\n",
+    "\n",
     "(a) Explain how to find such a P (or determine that no such P exists) by expressing the problem as an LMI.\n",
     "\n",
     "(b) Use CVX to construct such a Lyapunov function for the following instance of Lur’e problem:\n",
@@ -115,15 +141,38 @@
     "\n",
     "#### Solution:\n",
     "(a) For the Lyapunov function $V(x) = x^TPx$, $\\dot{V}(x) = \\dot x^TPx+x^TP\\dot x \\leq -\\beta V(x)$.\n",
-    "The nonlinear system is $\\dot x = Ax+b\\phi (t,c^Tx)$, plug in the Lyapunov function, get\n",
+    "The nonlinear system is $\\dot x = Ax+b\\phi (t,c^Tx)$, assume $u = b\\phi (t,c^Tx)$, plug in the Lyapunov function, get\n",
     "$$ \\dot V(x) =[Ax+b\\phi (t,c^Tx)]Px+x^TP[Ax+b\\phi (t,c^Tx)] \\leq -\\beta(x^TPx)$$\n",
     "Because the fuction $\\phi(t,·)$ satisfies $|\\phi(t,y)| ≤ α|y|$, the inequality above can be\n",
     "$$  \\begin{aligned}\n",
-    "[Ax+b\\phi (t,c^Tx)]Px+x^TP[Ax+b\\phi (t,c^Tx)]+\\beta(x^TPx) &\\leq 0\\\\ \n",
-    "[Ax+b\\phi (t,c^Tx)]Px+x^TP[Ax+b\\phi (t,c^Tx)]+\\beta(x^TPx) &\\leq 0 \n",
-    "\\end{aligned}$$\n",
-    "\n"
+    "[Ax+u]^TPx+x^TP[Ax+u]+\\beta(x^TPx) &\\leq 0\\\\ \n",
+    " x^T(a^TP+PA+\\beta P)x+x^TPu+u^TPx &\\leq 0 \n",
+    "\\end{aligned}$$  \n",
+    "Change it to the matrix form, for all the $(x,u)$ such that $u = b\\phi(t,c^Tx)$\n",
+    "$$\n",
+    "\\left[ \\begin{matrix}x^T & u^T \\end{matrix} \\right] \\left[ \\begin{matrix}-(A^TP+PA+\\beta P) & -P\\\\ -P &  0 \\end{matrix} \\right] \\left[ \\begin{matrix}x \\\\ u \\end{matrix} \\right] \\succeq 0 \n",
+    "$$ \n",
+    "\n",
+    "For the function $\\phi(t,·) : R→ R$ satisfies sector nonlinearity $|\\phi(t,y)| ≤ α|y|$, so $||\\phi(t,c^Tx)||^2 \\leq \\alpha^2 (x^Tcc^Tx)$\n",
+    "Since $||u||^2 = b^T||\\phi(t,C^Tx)||^2 b \\leq \\alpha^2 b^T (x^Tcc^Tx)b $, that is \n",
+    "$$ \\begin{aligned}  u^Tu -\\alpha^2(c^Txb)^T (c^Txb)  &\\leq 0\\\\\n",
+    "u^Tu -\\alpha^2x^Tb^Tcc^Tbx  &\\leq 0\\\\\n",
+    "\\end{aligned}$$ \n",
+    "\n",
+    "Change it to matrix form, we can get \n",
+    "$$ \\left[ \\begin{matrix}x^T & u^T \\end{matrix} \\right] \\left[ \\begin{matrix} \\alpha^2 cb^Tbc^T  &0\\\\ 0 & -I  \\end{matrix} \\right] \\left[ \\begin{matrix}x \\\\ u \\end{matrix} \\right] \\succeq 0 \n",
+    "$$ \n",
+    "Assume $G_0 = \\left[ \\begin{matrix}-(A^TP+PA+\\beta P) & -P\\\\ -P &  0 \\end{matrix} \\right]$,$G_1 = \\left[ \\begin{matrix} \\alpha^2 cb^Tbc^T  &0\\\\ 0 & -I  \\end{matrix} \\right]$, by s-procedure, we have $\\exist \\tau>0$, s.t. $G_0>\\tau G_1$, then the problem can be formulated by \n",
+    "\n",
+    "$$\\left\\{\\begin{array}{ll}\\min _{P,\\tau,\\alpha} & -\\beta \\\\ \\text { subject.: } & P \\succ 0, \\\\& \\tau>0, \\\\ &  G_0-\\tau G_1 \\succeq 0 \\\\\\end{array} \\right.$$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -171,7 +220,32 @@
    "metadata": {},
    "source": [
     "#### Solution\n",
-    "(a) \n"
+    "(a) For the time varying linear system, asymptotically stable is equivalent to exponential stable. For the Lyapunov function $V(z,t) = z^TPz$, the condition for stable is \n",
+    "$$ P >0$$\n",
+    "$$ \\dot{V}(z,t) = z^T [(A(t) + BK)^T P + P (A(t) + BK)]z ≤ −βV (z)$$\n",
+    "\n",
+    "For the second conditon we can get\n",
+    "$$ z^T [(A(t) + BK)^T P + P (A(t) + BK) + \\beta P]z ≤ 0$$\n",
+    "\n",
+    "Define $X = P^{-1},Y = KP^{-1}$, $P$ is symmetric matrix $P = P^T$, multiply $P^{-1}$ to the both sides of the inequality, then the above inequality can be\n",
+    "$$ XA(t)^T+Y^TB^T+A(t)X+BY+\\beta X \\leq 0 \\\\ \n",
+    " A(t)X + (A(t)X)^T + BY +(BY)^T + \\beta X \\leq 0  \\\\\n",
+    " -(A(t)X + (A(t)X)^T + BY +(BY)^T + \\beta X) \\geq 0 .$$\n",
+    "\n",
+    " In order to get a minimum decay rate for the clossed-loop trajectories, we must get $\\beta$ maximum, so the problem can be formulated by \n",
+    "\n",
+    "$$\\left\\{\\begin{array}{ll}\\min _{X,Y} & -\\beta \\\\ \\text { subject.: } & X^{-1} \\succ 0, \\\\ &  -(A(t)X + (A(t)X)^T + BY +(BY)^T + \\beta X) \\succeq 0 \\\\\\end{array} \\right.$$\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pro4-2\n",
+    "\n"
    ]
   },
   {
@@ -206,10 +280,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   "hash": "16f387c6babd236717f0608cc6650d0b9e8370489872ad1ae749126a0292d9be"
   },
   "kernelspec": {
-   "display_name": "PyCharm (Advanced-control-for-robotics)",
+   "display_name": "Python 3.9.11 ('drake')",
    "language": "python",
    "name": "python3"
   },
@@ -223,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.11"
   },
   "orig_nbformat": 4
  },
