--- a/hw6/Assignment6_12131094.ipynb
+++ b/hw6/Assignment6_12131094.ipynb
@@ -240,12 +240,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pydrake.all'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced control for robotics/hw6/Assignment6_12131094.ipynb Cell 11'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw6/Assignment6_12131094.ipynb#ch0000010?line=0'>1</a>\u001b[0m \u001b[39m# pro4-2\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw6/Assignment6_12131094.ipynb#ch0000010?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw6/Assignment6_12131094.ipynb#ch0000010?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpydrake\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mall\u001b[39;00m \u001b[39mimport\u001b[39;00m (MathematicalProgram, Solve)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw6/Assignment6_12131094.ipynb#ch0000010?line=3'>4</a>\u001b[0m \u001b[39m# This code is mainly adapted from Russ Tedrake. Underactuated Robotics: Algorithms for Walking,\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw6/Assignment6_12131094.ipynb#ch0000010?line=4'>5</a>\u001b[0m \u001b[39m#  Running, Swimming, Flying, and Manipulation (Course Notes for MIT 6.832). Downloaded from http://underactuated.mit.edu/\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw6/Assignment6_12131094.ipynb#ch0000010?line=5'>6</a>\u001b[0m \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw6/Assignment6_12131094.ipynb#ch0000010?line=6'>7</a>\u001b[0m \u001b[39m# Problem 4(b)\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw6/Assignment6_12131094.ipynb#ch0000010?line=7'>8</a>\u001b[0m \u001b[39m# Step 1: define dynamics matrices A_i(t) and corresponding parameters\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw6/Assignment6_12131094.ipynb#ch0000010?line=8'>9</a>\u001b[0m A \u001b[39m=\u001b[39m []\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pydrake.all'"
+     ]
+    }
+   ],
    "source": [
     "# pro4-2\n",
-    "\n"
+    "import numpy as np\n",
+    "from pydrake.all import (MathematicalProgram, Solve)\n",
+    "# This code is mainly adapted from Russ Tedrake. Underactuated Robotics: Algorithms for Walking,\n",
+    "#  Running, Swimming, Flying, and Manipulation (Course Notes for MIT 6.832). Downloaded from http://underactuated.mit.edu/\n",
+    "\n",
+    "# Problem 4(b)\n",
+    "# Step 1: define dynamics matrices A_i(t) and corresponding parameters\n",
+    "A = []\n",
+    "A.append(np.mat([[-0.5, 0.3, 0.4], [1, 0, 0], [0, 1, 0]]))\n",
+    "A.append(np.mat([[-0.7, 0.1, -0.2], [1, 0, 0], [0, 1, 0]]))\n",
+    "A.append(np.mat([[0.6, -0.7, 0.2], [1, 0, 0], [0, 1, 0]]))\n",
+    "\n",
+    "# B = np.mat([[1], [0], [0]])\n",
+    "B = np.array([1, 0, 0])\n",
+    "beta = 1.0\n",
+    "\n",
+    "# Step 2: formulate the S.D.P.\n",
+    "prog = MathematicalProgram()\n",
+    "num_states = A[0].shape[0]\n",
+    "X = prog.NewSymmetricContinuousVariables(num_states, \"X\")\n",
+    "Y = prog.NewContinuousVariables(num_states, \"Y\")\n",
+    "\n",
+    "# find X,Y\n",
+    "# There is no cost function?\n",
+    "# prog.AddLinearCost(np.trace(X))\n",
+    "\n",
+    "# s.t.\n",
+    "prog.AddPositiveSemidefiniteConstraint(X - .1 * np.identity(num_states))\n",
+    "for i in range(len(A)):\n",
+    "    prog.AddPositiveSemidefiniteConstraint(\n",
+    "        -(X.dot(A[i].transpose()) + Y.transpose().dot(B.transpose()) + A[i].dot(X) + B.dot(Y) + beta * X - .1 * np.identity(num_states))\n",
+    "    )\n",
+    "\n",
+    "result = Solve(prog)\n",
+    "\n",
+    "if result.is_success():\n",
+    "    X = result.GetSolution(X)\n",
+    "    Y = result.GetSolution(Y)\n",
+    "    P = np.linalg.inv(X)\n",
+    "    K = Y.dot(P) \n",
+    "    print(\"Succeed to find the result! \")\n",
+    "    print(\"P = \\n\", P)\n",
+    "    print(\"K = \\n \", K)\n",
+    "else:\n",
+    "    print(\"no result\")\n"
    ]
   },
   {
