--- a/hw6/Assignment6_12131094.ipynb
+++ b/hw6/Assignment6_12131094.ipynb
@@ -164,15 +164,90 @@
     "$$ \n",
     "Assume $G_0 = \\left[ \\begin{matrix}-(A^TP+PA+\\beta P) & -P\\\\ -P &  0 \\end{matrix} \\right]$,$G_1 = \\left[ \\begin{matrix} \\alpha^2 cb^Tbc^T  &0\\\\ 0 & -I  \\end{matrix} \\right]$, by s-procedure, we have $\\exist \\tau>0$, s.t. $G_0>\\tau G_1$, then the problem can be formulated by \n",
     "\n",
-    "$$\\left\\{\\begin{array}{ll}\\min _{P,\\tau,\\alpha} & -\\beta \\\\ \\text { subject.: } & P \\succ 0, \\\\& \\tau>0, \\\\ &  G_0-\\tau G_1 \\succeq 0 \\\\\\end{array} \\right.$$"
+    "$$\\left\\{\\begin{array}{ll}\\min _{P,\\tau,\\alpha} & -\\beta \\\\ \\text { subject.: } & P \\succ 0, \\\\& \\tau>0, \\\\ &  G_0-\\tau G_1 \\succeq 0 \\\\\\end{array} \\right.$$ "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[<Expression \"( - 0.10000000000000001 * P(0,0) + 2 * P(2,0) - 0.48999999999999994 * tau(0))\">\n",
+      "  <Expression \"( - P(0,0) - 0.10000000000000001 * P(1,0) + 3 * P(2,0) + P(2,1))\">\n",
+      "  <Expression \"( - P(1,0) + 2.8999999999999999 * P(2,0) + P(2,2))\">\n",
+      "  <Expression \"( - P(0,0) - 0.10000000000000001 * P(1,0) + 3 * P(2,0) + P(2,1))\">\n",
+      "  <Expression \"( - 2 * P(1,0) - 0.10000000000000001 * P(1,1) + 6 * P(2,1))\">\n",
+      "  <Expression \"( - P(2,0) - P(1,1) + 2.8999999999999999 * P(2,1) + 3 * P(2,2))\">]\n",
+      " [<Expression \"( - P(1,0) + 2.8999999999999999 * P(2,0) + P(2,2))\">\n",
+      "  <Expression \"( - P(2,0) - P(1,1) + 2.8999999999999999 * P(2,1) + 3 * P(2,2))\">\n",
+      "  <Expression \"( - 2 * P(2,1) + 5.9000000000000004 * P(2,2))\">\n",
+      "  <Expression \"(-1 * P(0,0))\"> <Expression \"(-1 * P(1,0))\">\n",
+      "  <Expression \"(-1 * P(2,0))\">]\n",
+      " [<Expression \"(-1 * P(1,0))\"> <Expression \"(-1 * P(1,1))\">\n",
+      "  <Expression \"(-1 * P(2,1))\"> <Expression \"(-1 * P(2,0))\">\n",
+      "  <Expression \"(-1 * P(2,1))\"> <Expression \"(-1 * P(2,2))\">]\n",
+      " [<Expression \"(-1 * P(0,0))\"> <Expression \"(-1 * P(1,0))\">\n",
+      "  <Expression \"(-1 * P(2,0))\"> <Expression \"(-1 * P(1,0))\">\n",
+      "  <Expression \"(-1 * P(1,1))\"> <Expression \"(-1 * P(2,1))\">]\n",
+      " [<Expression \"(-1 * P(2,0))\"> <Expression \"(-1 * P(2,1))\">\n",
+      "  <Expression \"(-1 * P(2,2))\"> <Expression \"(-1 * tau(0))\">\n",
+      "  <Expression \"0\"> <Expression \"0\">]\n",
+      " [<Expression \"0\"> <Expression \"(-1 * tau(0))\"> <Expression \"0\">\n",
+      "  <Expression \"0\"> <Expression \"0\"> <Expression \"(-1 * tau(0))\">]]\n",
+      "no result\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pro3-2\n",
+    "import numpy as np\n",
+    "from pydrake.all import (MathematicalProgram, Solve)\n",
+    "# This code is mainly adapted from Russ Tedrake. Underactuated Robotics: Algorithms for Walking,\n",
+    "#  Running, Swimming, Flying, and Manipulation (Course Notes for MIT 6.832). Downloaded from http://underactuated.mit.edu/\n",
+    "\n",
+    "\n",
+    "A = np.mat([[0, 1, 0], [0, 0, 1], [-1, -3, -3]])\n",
+    "\n",
+    "b = np.array([[0], [0], [1]])\n",
+    "c = np.array([[1], [0], [0]])\n",
+    "alpha = 0.7\n",
+    "beta = 0.1\n",
+    "\n",
+    "# Step 2: formulate the S.D.P.\n",
+    "prog = MathematicalProgram()\n",
+    "num_states = 3\n",
+    "P = prog.NewSymmetricContinuousVariables(num_states, \"P\")\n",
+    "tau = prog.NewContinuousVariables(1, \"tau\")\n",
+    "\n",
+    "I = np.identity(3)\n",
+    "G =[-(A.T@P+P@A+beta*P+tau*alpha**2*c@b.T@b@c.T),-P],[-P,-tau*I]\n",
+    "G = np.array(G).reshape(6,6)\n",
+    "print(G)\n",
+    "# find P,tau\n",
+    "\n",
+    "#prog.AddLinearCost(np.trace(X))\n",
+    "\n",
+    "# s.t.\n",
+    "prog.AddPositiveSemidefiniteConstraint(P - .01 *np.identity(num_states))\n",
+    "\n",
+    "prog.AddPositiveSemidefiniteConstraint(G)\n",
+    "    \n",
+    "\n",
+    "result = Solve(prog)\n",
+    "\n",
+    "if result.is_success():\n",
+    "    P = result.GetSolution(P)\n",
+    "    tau = result.GetSolution(tau)\n",
+    "    print(\"Succeed to find the solution! \")\n",
+    "    print(\"P = \\n\", P)\n",
+    "    print(\"tau = \\n \", tau)\n",
+    "else:\n",
+    "    print(\"no result\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -235,23 +310,25 @@
     " In order to get a minimum decay rate for the clossed-loop trajectories, we must get $\\beta$ maximum, so the problem can be formulated by \n",
     "\n",
     "$$\\left\\{\\begin{array}{ll}\\min _{X,Y} & -\\beta \\\\ \\text { subject.: } & X^{-1} \\succ 0, \\\\ &  -(A(t)X + (A(t)X)^T + BY +(BY)^T + \\beta X) \\succeq 0 \\\\\\end{array} \\right.$$\n",
-    " "
+    "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pydrake.all'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced control for robotics/hw6/Assignment6_12131094.ipynb Cell 11'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw6/Assignment6_12131094.ipynb#ch0000010?line=0'>1</a>\u001b[0m \u001b[39m# pro4-2\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw6/Assignment6_12131094.ipynb#ch0000010?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw6/Assignment6_12131094.ipynb#ch0000010?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpydrake\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mall\u001b[39;00m \u001b[39mimport\u001b[39;00m (MathematicalProgram, Solve)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw6/Assignment6_12131094.ipynb#ch0000010?line=3'>4</a>\u001b[0m \u001b[39m# This code is mainly adapted from Russ Tedrake. Underactuated Robotics: Algorithms for Walking,\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw6/Assignment6_12131094.ipynb#ch0000010?line=4'>5</a>\u001b[0m \u001b[39m#  Running, Swimming, Flying, and Manipulation (Course Notes for MIT 6.832). Downloaded from http://underactuated.mit.edu/\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw6/Assignment6_12131094.ipynb#ch0000010?line=5'>6</a>\u001b[0m \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw6/Assignment6_12131094.ipynb#ch0000010?line=6'>7</a>\u001b[0m \u001b[39m# Problem 4(b)\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw6/Assignment6_12131094.ipynb#ch0000010?line=7'>8</a>\u001b[0m \u001b[39m# Step 1: define dynamics matrices A_i(t) and corresponding parameters\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw6/Assignment6_12131094.ipynb#ch0000010?line=8'>9</a>\u001b[0m A \u001b[39m=\u001b[39m []\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pydrake.all'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Succeed to find the result! \n",
+      "P = \n",
+      " [[ 0.22333181 -0.14411104 -0.1899522 ]\n",
+      " [-0.14411104  0.13834869  0.09730774]\n",
+      " [-0.1899522   0.09730774  0.19301234]]\n",
+      "K = \n",
+      "  [-21.91386075  14.14052611  18.63857253]\n"
      ]
     }
    ],
@@ -275,16 +352,16 @@
     "\n",
     "# Step 2: formulate the S.D.P.\n",
     "prog = MathematicalProgram()\n",
-    "num_states = A[0].shape[0]\n",
+    "num_states = 3\n",
     "X = prog.NewSymmetricContinuousVariables(num_states, \"X\")\n",
     "Y = prog.NewContinuousVariables(num_states, \"Y\")\n",
     "\n",
     "# find X,Y\n",
-    "# There is no cost function?\n",
-    "# prog.AddLinearCost(np.trace(X))\n",
+    "\n",
+    "#prog.AddLinearCost(np.trace(X))\n",
     "\n",
     "# s.t.\n",
-    "prog.AddPositiveSemidefiniteConstraint(X - .1 * np.identity(num_states))\n",
+    "prog.AddPositiveSemidefiniteConstraint(X - .01 * np.identity(num_states))\n",
     "for i in range(len(A)):\n",
     "    prog.AddPositiveSemidefiniteConstraint(\n",
     "        -(X.dot(A[i].transpose()) + Y.transpose().dot(B.transpose()) + A[i].dot(X) + B.dot(Y) + beta * X - .1 * np.identity(num_states))\n",
@@ -297,7 +374,7 @@
     "    Y = result.GetSolution(Y)\n",
     "    P = np.linalg.inv(X)\n",
     "    K = Y.dot(P) \n",
-    "    print(\"Succeed to find the result! \")\n",
+    "    print(\"Succeed to find the solution! \")\n",
     "    print(\"P = \\n\", P)\n",
     "    print(\"K = \\n \", K)\n",
     "else:\n",
@@ -336,10 +413,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "16f387c6babd236717f0608cc6650d0b9e8370489872ad1ae749126a0292d9be"
+   "hash": "51109f29b74c83a02380174f2a388167f95e9702dac943105d59ff44b41a3852"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.11 ('drake')",
+   "display_name": "Python 3.8.10 ('env')",
    "language": "python",
    "name": "python3"
   },
@@ -353,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.11"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
